--- a/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -10,8 +10,8 @@ log4j.logger.org.apache.commons=ERROR
 log4j.appender.stdout.Target =System.out
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d{HH:mm:ss,SSS}]%m%n
-#log4j.appender.stdout.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH:mm:ss,SSS}]%n[%l]%n[%m]%n%n
+#log4j.appender.stdout.layout.ConversionPattern=[%d{HH:mm:ss,SSS}]%m%n
+log4j.appender.stdout.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH:mm:ss,SSS}]%n[%l]%n[%m]%n%n
 #log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c] %m%n
 
 
