--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jleaf</groupId>
-	<artifactId>jleaf</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<artifactId>jleaf-mvc</artifactId>
+	<version>0.0.1</version>
+	<packaging>jar</packaging>
 
 	<dependencies>
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
