--- a/src/demo/resources/log4j.properties
+++ b/src/demo/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to error
-log4j.rootLogger=DEBUG,stdout
+log4j.rootLogger=DEBUG,file,stdout
 #log4j.logger.jxc=DEBUG
 log4j.logger.org.apache.commons.digester = ERROR
 log4j.logger.org.apache.commons=ERROR
@@ -9,7 +9,7 @@ log4j.logger.com.mchange=WARN
 ###### Console appender definition #######
 
 # All outputs currently set to be a ConsoleAppender.
-log4j.appender.stdout.Target =System.out
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=[%d{HH:mm:ss,SSS}]%m%n
@@ -17,9 +17,10 @@ log4j.appender.stdout.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH:mm:ss,SSS}]
 #log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c] %m%n
 
 
-## direct messages to file SystemOut.log ###
+# direct messages to file SystemOut.log ###
 #log4j.appender.file=org.apache.log4j.FileAppender
 #log4j.appender.file.File=../logs/SystemOut.log
 #log4j.appender.file.Append=false
 #log4j.appender.file.layout=org.apache.log4j.PatternLayout
-#log4j.appender.file.layout.ConversionPattern =[%d{MM-dd HH:mm:ss.SSS} %-5p %C{1}.%M():%L] %m%n
+##log4j.appender.file.layout.ConversionPattern =[%d{MM-dd HH:mm:ss.SSS} %-5p %C{1}.%M():%L] %m%n
+#log4j.appender.file.layout.ConversionPattern =[%p][%d{yyyy-MM-dd HH:mm:ss,SSS}]%n[%l]%n[%m]%n%n
