--- a/src/demo/webapp/WEB-INF/web.xml
+++ b/src/demo/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
         <!-- 扫描的路径,可以设置多个,用逗号隔开 -->
         <init-param>
             <param-name>package</param-name>
-            <param-value>org.demo.*</param-value>
+            <param-value>org.shop.*</param-value>
             <!-- <param-value>org.demo.*,org.jleaf.db.jpa.interceptor.*</param-value> -->
         </init-param>
     </filter>
